Fixed songs being 0.8% too large

--- a/less/stylesheets/sections/main.less
+++ b/less/stylesheets/sections/main.less
@@ -1,5 +1,5 @@
 .song {
-  width: 100%;
+  width: 99.1%; //Kill me again
   display: block;
   position: relative;
   padding: @song-padding;
@@ -281,7 +281,7 @@
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   color: @text-dark;
